[package]
name = "moh-server"
version = "0.1.0"
authors = ["shirokuro <46kuro212@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
log = "0.4"
env_logger = "0.7"
openssl-probe = "0.1.2"
tokio-tungstenite = "0.10"
tokio = { version = "0.2", features = ["full"] }
futures-util = "0.3"
